--- a/examples/TESS_DBV_example.ipynb
+++ b/examples/TESS_DBV_example.ipynb
@@ -22,9 +22,17 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: 31% (6168/19692) of the cadences will be ignored due to the quality mask (quality_bitmask=175).\n"
+     ]
+    }
+   ],
    "source": [
-    "lc = lk.search_lightcurvefile('150808542').download().get_lightcurve(\"PDCSAP_FLUX\").flatten(2161).remove_outliers(5)"
+    "lc = lk.search_lightcurvefile('TIC 257459955',mission='TESS',sector=3).download().get_lightcurve(\"PDCSAP_FLUX\").flatten(2161).remove_outliers(5)"
    ]
   },
   {
@@ -36,13 +44,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:94: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  tan_2omega_tau = (S2 - 2 * S * C) / (C2 - (C * C - S * S))\n",
+      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:94: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  tan_2omega_tau = (S2 - 2 * S * C) / (C2 - (C * C - S * S))\n",
       "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:123: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  power = (YC * YC / CC + YS * YS / SS)\n",
+      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:123: RuntimeWarning: invalid value encountered in true_divide\n",
       "  power = (YC * YC / CC + YS * YS / SS)\n"
      ]
     }
    ],
    "source": [
     "pyriod = Pyriod(lc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ecac0ac1439473d8183e5e046a388a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VGFiKGNoaWxkcmVuPShWQm94KGNoaWxkcmVuPShEcm9wZG93bihkZXNjcmlwdGlvbj11J1RpbWUgU2VyaWVzIHRvIERpc3BsYXk6Jywgb3B0aW9ucz0oJ09yaWdpbmFsJywgJ1Jlc2lkdWFscyfigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pyriod.Pyriod()"
    ]
   },
   {
@@ -55,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34e11c47a1e748f5a276ad50a03a5cd2",
+       "model_id": "f4bc7508594c4d7da4d676ddfd4316a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,12 +119,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eb098b439434b12bd7b1649abb35c95",
+       "model_id": "1c997223fb0740b890fe5084ecb8762e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VGFiKGNoaWxkcmVuPShWQm94KGNoaWxkcmVuPShIQm94KGNoaWxkcmVuPShUZXh0KHZhbHVlPXUnMTUzOS44ODY1Mzk1MjUzNTc5JywgZGVzY3JpcHRpb249dSdGcmVxdWVuY3k6JywgcGxhY2XigKY=\n"
+       "VGFiKGNoaWxkcmVuPShWQm94KGNoaWxkcmVuPShIQm94KGNoaWxkcmVuPShUZXh0KHZhbHVlPXUnMTU2MS4xODkxOTgyMTA0OTQ5JywgZGVzY3JpcHRpb249dSdGcmVxdWVuY3k6JywgcGxhY2XigKY=\n"
       ]
      },
      "metadata": {},
@@ -99,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -107,40 +145,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aaddcd8fad774b9093ade8eabb956116",
+       "model_id": "7aab55cf2d15429095e07fd0235d4d55",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "SEJveChjaGlsZHJlbj0oQnV0dG9uKGRlc2NyaXB0aW9uPXUnUmVmaW5lIGZpdCcsIGljb249dSdyZWZyZXNoJywgc3R5bGU9QnV0dG9uU3R5bGUoKSwgdG9vbHRpcD11J1JlZmluZSBmaXQgb2bigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ecb405e8a6341048c5318a7f7f48b24",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "UWdyaWRXaWRnZXQoZ3JpZF9vcHRpb25zPXsnZGVmYXVsdENvbHVtbldpZHRoJzogNjUsICdoaWdobGlnaHRTZWxlY3RlZFJvdyc6IFRydWUsICdlbmFibGVUZXh0U2VsZWN0aW9uT25DZWxscyfigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6f473d3960c4708bb85d2df09fed706",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "SEJveChjaGlsZHJlbj0oQnV0dG9uKGRlc2NyaXB0aW9uPXUnU2F2ZScsIGljb249dSdzYXZlJywgc3R5bGU9QnV0dG9uU3R5bGUoKSwgdG9vbHRpcD11J1NhdmUgc29sdXRpb24gdG8gY3N2IGbigKY=\n"
+       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oQnV0dG9uKGRlc2NyaXB0aW9uPXUnUmVmaW5lIGZpdCcsIGljb249dSdyZWZyZXNoJywgc3R5bGU9QnV0dG9uU3R5bGUoKSwgdG9vbHRpcD3igKY=\n"
       ]
      },
      "metadata": {},
@@ -153,18 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88c9107ba6eb4c19b277ba6a0b32c49d",
+       "model_id": "42a8725fe25d4420a4e6898efdcca6c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSFRNTCh2YWx1ZT11JzIwMTktMTItMjIgMTI6NTk6NTEsNTkwIC0gSU5GTyAtIFB5cmlvZCBvYmplY3QgaW5pdGlhbGl6ZWQuPGJyPlxuJywgZGVzY3JpcHRpb249dSfigKY=\n"
+       "VkJveChjaGlsZHJlbj0oSFRNTCh2YWx1ZT11JzIwMTktMTItMjIgMjA6NTQ6NTYsMjE4IC0gSU5GTyAtIFB5cmlvZCBvYmplY3QgaW5pdGlhbGl6ZWQuPGJyPlxuMjAxOS0xMi0yMiAyMDo1NTrigKY=\n"
       ]
      },
      "metadata": {},
