update DBV example

--- a/examples/TESS_DBV_example.ipynb
+++ b/examples/TESS_DBV_example.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This first example of the basic usage of the Pyriod package will be demonstrated at the [TASC5/KASC12 workshop](https://web.mit.edu/tasc5/) in Boston 22-26 July 2019.  It shows how to reproduce the frequency analysis of a pulsating helium-atmosphere white dwarf presented in [Bell et al. (A&A, 632, A42)](https://ui.adsabs.harvard.edu/abs/2019A%26A...632A..42B)."
+    "This first example of the basic usage of the Pyriod package was demonstrated at the [TASC5/KASC12 workshop](https://web.mit.edu/tasc5/) in Boston 22-26 July 2019.  It shows how to reproduce the frequency analysis of a pulsating helium-atmosphere white dwarf presented in [Bell et al. (A&A, 632, A42)](https://ui.adsabs.harvard.edu/abs/2019A%26A...632A..42B).  \n",
+    "\n",
+    "See the online [tutorial](https://pyriod.readthedocs.io/en/latest/tutorial/) for more info about how to use Pyriod."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,169 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: 31% (6168/19692) of the cadences will be ignored due to the quality mask (quality_bitmask=175).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#Download light curve of a DBV white dwarf pulsator observed by TESS\n",
     "lc = lk.search_lightcurvefile('TIC 257459955',mission='TESS',sector=3).download().get_lightcurve(\"PDCSAP_FLUX\").flatten(2161).remove_outliers(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:94: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  tan_2omega_tau = (S2 - 2 * S * C) / (C2 - (C * C - S * S))\n",
-      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:94: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  tan_2omega_tau = (S2 - 2 * S * C) / (C2 - (C * C - S * S))\n",
-      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:123: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  power = (YC * YC / CC + YS * YS / SS)\n",
-      "/Users/keatonb/anaconda2/lib/python2.7/site-packages/astropy/stats/lombscargle/implementations/fast_impl.py:123: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  power = (YC * YC / CC + YS * YS / SS)\n"
-     ]
-    }
-   ],
-   "source": [
-    "pyriod = Pyriod(lc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16ff7b8157f74411b2a3e873fc694f51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VkJveChjaGlsZHJlbj0oRHJvcGRvd24oZGVzY3JpcHRpb249dSdUaW1lIFNlcmllcyB0byBEaXNwbGF5OicsIG9wdGlvbnM9KCdPcmlnaW5hbCcsICdSZXNpZHVhbHMnKSwgdmFsdWU9J09yaWfigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pyriod.TimeSeries()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4843967efdad47f99e920d28e609ad9d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VGFiKGNoaWxkcmVuPShWQm94KGNoaWxkcmVuPShIQm94KGNoaWxkcmVuPShUZXh0KHZhbHVlPXUnMTU2MS4xODkxOTgyMTA0OTQ5JywgZGVzY3JpcHRpb249dSdGcmVxdWVuY3k6JywgcGxhY2XigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pyriod.Periodogram()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5023d4759282465fa2e3a1d88daa1a1c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSEJveChjaGlsZHJlbj0oQnV0dG9uKGRlc2NyaXB0aW9uPXUnUmVmaW5lIGZpdCcsIGljb249dSdyZWZyZXNoJywgc3R5bGU9QnV0dG9uU3R5bGUoKSwgdG9vbHRpcD3igKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pyriod.Signals()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b20633f17074d138c153ef9ed0b5d48",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VkJveChjaGlsZHJlbj0oSFRNTCh2YWx1ZT11JzIwMTktMTItMjIgMjE6NDQ6MTEsODg3IC0gSU5GTyAtIFB5cmlvZCBvYmplY3QgaW5pdGlhbGl6ZWQuPGJyPlxuJywgZGVzY3JpcHRpb249dSfigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pyriod.Log()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da4d51b0bab9462caaaade6796435bff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VGFiKGNoaWxkcmVuPShWQm94KGNoaWxkcmVuPShEcm9wZG93bihkZXNjcmlwdGlvbj11J1RpbWUgU2VyaWVzIHRvIERpc3BsYXk6Jywgb3B0aW9ucz0oJ09yaWdpbmFsJywgJ1Jlc2lkdWFscyfigKY=\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pyriod.Pyriod()"
    ]
   },
   {
@@ -190,7 +35,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Instantiate Pyriod object\n",
+    "pyriod = Pyriod(lc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Interact with time series\n",
+    "pyriod.TimeSeries()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Interact with periodogram\n",
+    "pyriod.Periodogram()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Interact with frequency solution\n",
+    "pyriod.Signals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Interact with log\n",
+    "pyriod.Log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Show all panels in tabs (may be buggy in Python 3)\n",
+    "pyriod.Pyriod()"
+   ]
   }
  ],
  "metadata": {
