fix re-launch link'

--- a/examples/TSC2_Demo.ipynb
+++ b/examples/TSC2_Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "496f25fb",
+   "id": "5b6f0aae",
    "metadata": {},
    "source": [
     "## Pyriod Tutorial: Python Tools for Pre-Whitening Frequency Analysis\n",
@@ -11,7 +11,7 @@
     "\n",
     "Run the code in each sequential cell by holding `shift` and hitting `return`.\n",
     "\n",
-    "Note that this notebook will shut down after 10 minutes of inactivity.  Refresh the page to access a new copy.\n",
+    "Note that this notebook will shut down after 10 minutes of inactivity.  [Click here](https://dirac.us/oil) to launch a fresh notebook.\n",
     "\n",
     "You can install this package on your own machine with `pip install Pyriod`."
    ]
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "414c7470",
+   "id": "7818b5b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d171b4e",
+   "id": "85be70f8",
    "metadata": {},
    "source": [
     "Use the cell below to search for your favorite TESS light curve to analyze, using [lightkurve](http://lightkurve.org/).\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02fc2ad1",
+   "id": "1b807d56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1fa511b",
+   "id": "947974f9",
    "metadata": {},
    "source": [
     "Choose the light curve product you'd like to analyze by number.\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52714055",
+   "id": "44cdf192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa49c0a",
+   "id": "d0c7d399",
    "metadata": {},
    "source": [
     "Now pass the light curve data to Pyriod to begin you interactive frequency analysis."
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a0e06a",
+   "id": "36e29909",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52908f96",
+   "id": "58afdbdc",
    "metadata": {},
    "source": [
     "Pyriod has four interactive cell types: TimeSeries, Periodogram, Signals, and Log.\n",
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd23d26e",
+   "id": "36508b2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8ccd187",
+   "id": "82f9e1ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb98fef",
+   "id": "0b1781a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b579cff",
+   "id": "952aa604",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a253b742",
+   "id": "c88c0f99",
    "metadata": {},
    "source": [
     "You can interact with the cells above in any order, and each cell will update based on interactions with the others. \n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2091e1bc",
+   "id": "b2d78128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "779ff180",
+   "id": "99f168bc",
    "metadata": {},
    "source": [
     "If you experience any issues or have comments or questions, you can email me at keatonb@uw.edu, open an issue [on Github](https://github.com/keatonb/Pyriod/issues), Tweet to [@astrokeat](https://www.twitter.com/astrokeat), or connect with me at the conference!"
