update TSC2 tutorial

--- a/examples/TSC2_Demo.ipynb
+++ b/examples/TSC2_Demo.ipynb
@@ -13,15 +13,12 @@
     "\n",
     "Note that this notebook will shut down after 10 minutes of inactivity.  [Click here](https://dirac.us/oil) to launch a fresh notebook.\n",
     "\n",
-    "You can install this package on your own machine with `pip install Pyriod`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f7a762da",
-   "metadata": {},
-   "source": [
-    "# WARNING: this tutorial is incomplete and will be finished by the start of the TSC2 meeting on 2 August 2021."
+    "You can install this package on your own machine with `pip install Pyriod`. Make sure to enable the following Jupyter extensions in the terminal on your own machine (before you start your Jupyter Notebook server!):\n",
+    "```\n",
+    "jupyter nbextension enable --py --sys-prefix qgrid\n",
+    "jupyter nbextension enable --py --sys-prefix widgetsnbextension\n",
+    "jupyter nbextension enable --py --sys-prefix ipympl\n",
+    "```"
    ]
   },
   {
@@ -44,9 +41,13 @@
     "Use the cell below to search for your favorite TESS light curve to analyze, using [lightkurve](http://lightkurve.org/).\n",
     "\n",
     "If you don't already have a favorite TESS light curve, here are some interesting suggestions:\n",
-    " - (pulsating helium-atmpshere white dwarf star)\n",
-    " - (delta scuti variable)\n",
-    " - Sextuplely eclipsing binary"
+    " - TIC 257459955 = pulsating helium-atmpshere white dwarf star ([Bell et al. 2019, A&A, 632, 42](https://ui.adsabs.harvard.edu/abs/2019A%26A...632A..42B/abstract))\n",
+    " - TIC 229059574  = $\\lambda$ Boo pulsator ([Antoci et al. 2019, MNRAS, 490, 4040](https://ui.adsabs.harvard.edu/abs/2019MNRAS.490.4040A/abstract))\n",
+    " - TIC 43363194 = delta Scuti pulsator (HD 3622; [Bedding et al. 2020, Nature, 581, 147](https://ui.adsabs.harvard.edu/abs/2020Natur.581..147B/abstract))\n",
+    " - TIC 355151781 = tidally trapped delta Scuti pulsations and ellipsoidal variations ([Handler et al. 2020, Nature Astronomy, 4, 684](https://ui.adsabs.harvard.edu/abs/2020NatAs...4..684H/abstract))\n",
+    " - TIC 168789840 = sextuplely eclipsing binary ([Powell et al. 2021, AJ, 161, 162](https://ui.adsabs.harvard.edu/abs/2021AJ....161..162P/abstract))\n",
+    " \n",
+    "If you have another favorite target that Pyriod performs well on, let Keaton know and he'll add them to the list."
    ]
   },
   {
@@ -56,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targetname = 'TIC 900086743'\n",
+    "targetname = 'TIC 257459955'\n",
     "\n",
     "searchresults = lk.search_lightcurve(targetname,mission='TESS')\n",
     "searchresults"
@@ -175,11 +176,10 @@
     "You can interact with the cells above in any order, and each cell will update based on interactions with the others. \n",
     "\n",
     "Here are some things to try:\n",
-    " - \n",
-    " - \n",
-    " - \n",
-    " - \n",
-    " -\n",
+    " - Is there bad data in your light curve? Without the zoom or pan tools selected, you can click and drag your curser around bad points and remove from the analysis by clicking delete/backspace.\n",
+    " - If there are periodogram signals that are sums, differences, or harmonics (e.g., many harmonics of orbital frequency for eclipsing binaries), add them to the frequency list as expressions such as \"f0 + f1\" or \"2 * f0\" to enforce these relationships.\n",
+    " - Try folding the light curve on frequencies in your signals solution (expand the options tab in the TimeSeries cell), especially any fundamental frequencies of sets of harmonics.\n",
+    " - Try to fit every signal in a pulsating star! Note that only signals that are coherent throughout the observations will prewhiten fully, leaving you with a flat noise background.\n",
     " \n",
     "You can also display all widgets in different tabs of the same cell as follows, if you prefer."
    ]
