--- a/examples/TSC2_Demo.ipynb
+++ b/examples/TSC2_Demo.ipynb
@@ -7,18 +7,13 @@
    "source": [
     "## Pyriod Tutorial: Python Tools for Pre-Whitening Frequency Analysis\n",
     "\n",
-    "This interactive demo shows how to use the new Python package Pyriod to analyze TESS light curves.\n",
+    "This interactive demo shows how to use the new Python package Pyriod to analyze TESS light curves. You can fit generic light curves by constructing a [lightkurve.LightCurve object](https://lightkurve.github.io/lightkurve/reference/lightcurve.html).\n",
     "\n",
     "Run the code in each sequential cell by holding `shift` and hitting `return`.\n",
     "\n",
-    "Note that this notebook will shut down after 10 minutes of inactivity.  [Click here](https://dirac.us/oil) to launch a fresh notebook.\n",
+    "Note that this notebook will shut down after 10 minutes of inactivity.\n",
     "\n",
-    "You can install this package on your own machine with `pip install Pyriod`. Make sure to enable the following Jupyter extensions in the terminal on your own machine (before you start your Jupyter Notebook server!):\n",
-    "```\n",
-    "jupyter nbextension enable --py --sys-prefix qgrid\n",
-    "jupyter nbextension enable --py --sys-prefix widgetsnbextension\n",
-    "jupyter nbextension enable --py --sys-prefix ipympl\n",
-    "```"
+    "You can install this package on your own machine with `pip install Pyriod`."
    ]
   },
   {
@@ -199,13 +194,13 @@
    "id": "99f168bc",
    "metadata": {},
    "source": [
-    "If you experience any issues or have comments or questions, you can email me at keatonb@uw.edu, open an issue [on Github](https://github.com/keatonb/Pyriod/issues), Tweet to [@astrokeat](https://www.twitter.com/astrokeat), or connect with me at the conference!"
+    "If you experience any issues or have comments or questions, you can email me at keaton.bell@qc.cuny.edu, or open an issue [on Github](https://github.com/keatonb/Pyriod/issues)."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
