update online demo

--- a/examples/TSC2_Demo.ipynb
+++ b/examples/TSC2_Demo.ipynb
@@ -40,9 +40,7 @@
     " - TIC 229059574  = $\\lambda$ Boo pulsator ([Antoci et al. 2019, MNRAS, 490, 4040](https://ui.adsabs.harvard.edu/abs/2019MNRAS.490.4040A/abstract))\n",
     " - TIC 43363194 = delta Scuti pulsator (HD 3622; [Bedding et al. 2020, Nature, 581, 147](https://ui.adsabs.harvard.edu/abs/2020Natur.581..147B/abstract))\n",
     " - TIC 355151781 = tidally trapped delta Scuti pulsations and ellipsoidal variations ([Handler et al. 2020, Nature Astronomy, 4, 684](https://ui.adsabs.harvard.edu/abs/2020NatAs...4..684H/abstract))\n",
-    " - TIC 168789840 = sextuplely eclipsing binary ([Powell et al. 2021, AJ, 161, 162](https://ui.adsabs.harvard.edu/abs/2021AJ....161..162P/abstract))\n",
-    " \n",
-    "If you have another favorite target that Pyriod performs well on, let Keaton know and he'll add them to the list."
+    " - TIC 168789840 = sextuplely eclipsing binary ([Powell et al. 2021, AJ, 161, 162](https://ui.adsabs.harvard.edu/abs/2021AJ....161..162P/abstract))"
    ]
   },
   {
@@ -87,7 +85,7 @@
     "lc = lc.normalize()\n",
     "\n",
     "#Detrend\n",
-    "lc = lc.flatten(window_length = 1001)"
+    "lc = lc.flatten(window_length = 1001) #window length must be positive odd integer number of cadences"
    ]
   },
   {
@@ -111,12 +109,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f87e391-5c11-4701-a23a-ba0eec76df8b",
+   "metadata": {},
+   "source": [
+    "The full suite of Pyriod widgets can be displayed as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c0cde60-8b1a-4555-88b4-219c3ae2de75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyriod.Pyriod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "58afdbdc",
    "metadata": {},
    "source": [
-    "Pyriod has four interactive cell types: TimeSeries, Periodogram, Signals, and Log.\n",
-    "\n",
-    "Let's display these in the next four cells. Information about how to interact with each can be displayed by clicking the \"info\" bar."
+    "Pyriod has four interactive cell types: TimeSeries, Periodogram, Signals, and Log. They can also be individually displayed in separate cells."
    ]
   },
   {
@@ -172,21 +186,11 @@
     "\n",
     "Here are some things to try:\n",
     " - Is there bad data in your light curve? Without the zoom or pan tools selected, you can click and drag your curser around bad points and remove from the analysis by clicking delete/backspace.\n",
-    " - If there are periodogram signals that are sums, differences, or harmonics (e.g., many harmonics of orbital frequency for eclipsing binaries), add them to the frequency list as expressions such as \"f0 + f1\" or \"2 * f0\" to enforce these relationships.\n",
-    " - Try folding the light curve on frequencies in your signals solution (expand the options tab in the TimeSeries cell), especially any fundamental frequencies of sets of harmonics.\n",
-    " - Try to fit every signal in a pulsating star! Note that only signals that are coherent throughout the observations will prewhiten fully, leaving you with a flat noise background.\n",
-    " \n",
-    "You can also display all widgets in different tabs of the same cell as follows, if you prefer."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2d78128",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pyriod.Pyriod()"
+    " - Wondering if periodogram peaks are significant? Under the \"options\" area of the Periodogram tab, compute a significance threshold. This is calculated as the average amplitude in the periodogram of residuals, times some scaling factor that you can set appropriately for your science case.\n",
+    " - Pre-whiten significant signals by clicking on them in the periodogram, then \"Add to solution,\" then \"Refine fit.\" This will add frequencies to the Signals table, and the corresponding peak(s) should shift from the periodogram of residuals (blue) to the periodogram of the current model (green).\n",
+    " - If there are periodogram signals that are precise sums, differences, or harmonics of signals already in your solution (e.g., many harmonics of orbital frequency for eclipsing binaries), add them to the frequency list as expressions such as \"f0 + f1\" or \"2 * f0\" to enforce these relationships.\n",
+    " - Try folding the light curve on frequencies in your signals solution (expand the options tab in the TimeSeries cell). This is especially interesting for any fundamental frequencies of sets of harmonics.\n",
+    " - Try to fit every signal in a pulsating star! Note that only signals that are coherent throughout the observations will prewhiten fully, leaving you with a relatively flat noise background."
    ]
   },
   {
@@ -214,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
